# staminal

./: .gitignore  CALUDE.md  CLAUDE.md  LICENSE  LICENSE.md  README.md  network.download.md  package-lock.json  package.json  test.html
agents/done/: client-main-thread-refactor.md  event-system.md  graphic-engines-bevy.md  graphic-widgets.md  network-download.md  server-package-manager.md
agents/plans/: bevy-ui-widgets-integration.md  ecs-api-exposure.md  graphic-widgets.md  resource-loading-system.md
agents/todo/: bevy-refactory.md  client-game-engine.md  graphic-engines-bevy.md  network.download.md
apps/client_develop_prepare/: sync-client-mods.mjs
apps/server_mods_packer/: mods-packer.mjs  package-lock.json  package.json
apps/shared/stam_log/: Cargo.toml
apps/shared/stam_log/src/: lib.rs
apps/shared/stam_mod_runtimes/: Cargo.toml
apps/shared/stam_mod_runtimes/src/: lib.rs  logging.rs  runtime_type.rs  terminal_input.rs
apps/shared/stam_mod_runtimes/src/adapters/: mod.rs
apps/shared/stam_mod_runtimes/src/adapters/js/: bindings.rs  config.rs  graphic_bindings.rs  mod.rs  runtime.rs
apps/shared/stam_mod_runtimes/src/adapters/js/glue/: main.js
apps/shared/stam_mod_runtimes/src/api/: console.rs  events.rs  file.rs  locale.rs  mod.rs  network.rs  path_security.rs  process.rs  resource.rs  system.rs  ui.rs  window.rs
apps/shared/stam_mod_runtimes/src/api/graphic/: api.rs  command.rs  commands.rs  common_types.rs  engines.rs  event.rs  events.rs  input.rs  mod.rs  proxy.rs  widget.rs  window.rs
apps/shared/stam_mod_runtimes/src/api/graphic/ecs/: mod.rs  types.rs
apps/shared/stam_protocol/: .gitignore  Cargo.toml
apps/shared/stam_protocol/src/: error.rs  game_message.rs  lib.rs  primal_message.rs  stream.rs
apps/shared/stam_schema/: Cargo.toml
apps/shared/stam_schema/src/: error.rs  lib.rs  mod_manifest.rs  mod_validation.rs
apps/stam_client/: Cargo.toml  js-mod-integration.md  js-runtime-cross-platform-analysis.md  js-runtime-game-engine-analysis.md
apps/stam_client/assets/: README.md
apps/stam_client/assets/locales/en-US/: main.ftl
apps/stam_client/assets/locales/it-IT/: main.ftl
apps/stam_client/src/: app_paths.rs  locale.rs  main.rs
apps/stam_client/src/bevy/: app.rs  mod.rs  systems.rs  ui_bridge.rs  window_visibility.rs
apps/stam_client/src/engines/: bevy.rs  mod.rs
apps/stam_client/src/graphic/: bevy_engine.rs  mod.rs
apps/stam_client/src/js_runtime/: README.md  config.rs  console_api.rs  mod.rs  process_api.rs  runtime.rs
apps/stam_client/src/mod_runtime/: js_adapter.rs  mod.rs
apps/stam_client/src/runtime_api/: README.md  console.rs  mod.rs  process.rs
apps/stam_client/workspace_data/: .gitignore
apps/stam_server/: Cargo.toml  todo.md
apps/stam_server/src/: client_manager.rs  config.rs  game_client.rs  main.rs  mod_loader.rs  primal_client.rs
apps/stam_server/workspace_data/configs/: develop-example.json  production-example.json
docs/: ai-agents.md  concept.md  connection-flow.md  event-system.md  events.md  graphic-window.md  js-runtime-return-values.md  js-window.md  mod-runtime-system.md
docs/graphic/: ecs.md  window.md
docs/js/: graphic-window.md
docs/mods/: resource-manager.md
docs/mods/js/: file.md  locale.md  resource-manager.md  system.md
docs/mods/js/graphic/: ecs.md  window.md
mods/: README.md
mods/bme-assets-01/: manifest.json
mods/bme-core/client/: game.js  index.js  manifest.json
mods/bme-core/server/: index.js  manifest.json
mods/js-helper/: index.js  manager.js  manifest.json
mods/mods-manager/: manager.js  manifest.json
mods/mods-manager/client/: helper.js  index.js  main.js  manager.js  manifest.json
mods/mods-manager/client/locale/en-US/: main.ftl
mods/mods-manager/client/locale/it-IT/: main.ftl
mods/mods-manager/locale/en-US/: main.ftl
mods/mods-manager/server/: index.js  manager.js  manifest.json
mods/probe/: index.js  manifest.json
mods/probe2/: manifest.json
mods/remote/: index.js  manifest.json
mods/simplegui/client/: manifest.json
todo/: event-system.md  network.download.md
