[package]
name = "stam_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["time", "local-time"] }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
clap = { version = "4.5", features = ["derive", "env"] }
stam_protocol = { path = "../shared/stam_protocol" }
tokio = { version = "1.0", features = ["rt-multi-thread", "signal", "macros", "net", "io-util"] }
atty = "0.2"
sha2 = "0.10"

[[bin]]
name = "stam_client"
path = "src/main.rs"
