[package]
name = "stam_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
clap = { version = "4.5", features = ["derive", "env"] }
stam_protocol = { path = "../shared/stam_protocol" }
stam_schema = { path = "../shared/stam_schema" }
stam_mod_runtimes = { path = "../shared/stam_mod_runtimes", features = ["js"] }
stam_log = { path = "../shared/stam_log" }
tokio = { version = "1.0", features = ["rt-multi-thread", "signal", "macros", "net", "io-util", "sync", "time"] }
sha2 = "0.10"
fluent = "0.16"
fluent-bundle = "0.15"
intl-memoizer = "0.5"
unic-langid = "0.9"
sys-locale = "0.3"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
crossterm = "0.28"

# Graphic Engine - Bevy
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",  # Required in Bevy 0.17+ for UI rendering
    "default_font",    # Required for text rendering without custom fonts
    "x11",
    "wayland",
    "multi_threaded",
] }

[[bin]]
name = "stam_client"
path = "src/main.rs"
