[package]
name = "stam_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "stam_server"
path = "src/lib.rs"

[[bin]]
name = "stam_server"
path = "src/main.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["time", "local-time"] }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["preserve_order"] }
stam_schema = { path = "../shared/stam_schema" }
