[package]
name = "stam_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["preserve_order"] }
stam_schema = { path = "../shared/stam_schema" }
stam_protocol = { path = "../shared/stam_protocol" }
stam_mod_runtimes = { path = "../shared/stam_mod_runtimes", features = ["js"] }
stam_log = { path = "../shared/stam_log" }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time", "sync", "macros", "net", "io-util", "fs"] }
crossterm = "0.29"
