[package]
name = "stam_mod_runtimes"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time"] }
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

# Optional runtime-specific dependencies
rquickjs = { version = "0.10", features = ["classes", "properties", "loader", "futures", "parallel", "macro"], optional = true }

[features]
default = []
# Enable JavaScript runtime support
js = ["rquickjs"]
# Future runtime support
lua = []
csharp = []
