[package]
name = "stam_mod_runtimes"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (shared library)
stam_log = { path = "../stam_log" }

# Internationalization (for mod-specific locales)
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# tar.gz file extraction
tar = "0.4"
flate2 = "1.0"

# Terminal input handling (raw mode, key events)
crossterm = "0.28"
atty = "0.2"

# Optional runtime-specific dependencies
rquickjs = { version = "0.10", features = ["classes", "properties", "loader", "futures", "parallel", "macro"], optional = true }

[features]
default = []
# Enable JavaScript runtime support
js = ["rquickjs"]
# Future runtime support
lua = []
csharp = []
